tests/src/frontend/typechecking/invalid/assign_pattern2.sk
base class Foo<T>

class Bar extends Foo<Int>
class Baz(value: String) extends Foo<String>

fun makeFoo(): Foo<String> {
  Baz("Pass\n")
}

fun main(): String {
  s = "Fail";
  Baz(s) = makeFoo();
  s
}
